syntax = "proto3";

package settings.profile.name.response;

enum Error {
    INVALID_CREDENTIALS = 0;
    TOO_MANY_REQUESTS = 1;
    INVALID_NAME = 2;
    SERVER_ERROR = 3;
}

message Response {
    oneof response_field {
        Error error = 1;
        bool requires_password = 2;
    }
}

